add state to App component

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Andvanced React App</title>
   </head>
   <body>
-    <h2>Hello express - <%= answer%></h2>
+    <div id="root"></div>
+    <script src="/bundle.js"></script>
   </body>
 </html>
