--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="">
-    <title>Andvanced React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="/bundle.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Advanced React Application Example</title>
+</head>
+<body>
+  <div id="root"><%- initialContent -%></div>
+
+  <script src="/bundle.js" charset="utf-8"></script>
+</body>
 </html>
